--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
         </div>
     </nav>
     <!-- End Nav Element -->
+    <!-- Header Section -->
+    <header class="header" id="header">
+        <div class="container-fluid">
+            <div class="row height-max align-items-center">
+                <div class="col col-md-9 ml-auto text-right pr-5">
+                    <h5 class="title-heading d-inline-block p-2 text-uppercase">The All New</h5>
+                    <h2 class="text-uppercase my-2 title">2020 Mercedes-benz</h2>
+                    <h3 class="text-uppercase">model name</h3>
+                    <h6 class="text-capitalize">starts from</h6>
+                    <h2>
+                        <span> &#8358; </span> 27,000,000
+                        <a href="#" class="title-icon d-inline-block mx-2">
+                            <i class="fas fa-play"></i>
+                        </a>
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- End of Header section -->
 
 
     <script src="js/jquery-3.2.1.min.js"></script>
