--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
     <!-- preloader -->
+    <div class="preloader d-flex justify-content-center align-items-center">
+        <img src="img/preloader.gif" alt="preloader">
+    </div>
     <!-- End of preloader -->
 
     <!-- Nav Element -->
@@ -148,5 +151,6 @@
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
