--- a/index.html
+++ b/index.html
@@ -147,6 +147,195 @@
         </div>
     </section>
     <!-- End of skills section -->
+    <!-- Inventory section -->
+    <section class="inventory py-5" id="inventory">
+        <div class="container">
+            <!-- Section title -->
+            <div class="row mb-5">
+                <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+                    <h1 class="font-weight-bold align-self-center mx-1">Our</h1>
+                    <h1 class="section-title--special mx-1">Inventory</h1>
+                </div>
+            </div>
+            <!-- End of section title -->
+            <div class="row mb-5">
+                <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
+                    <button class="btn btn-outline-secondary text-uppercase mx-1">All</button>
+                    <button class="btn btn-outline-secondary text-uppercase mx-1">American</button>
+                    <button class="btn btn-outline-secondary text-uppercase mx-1">German</button>
+                </div>
+            </div>
+            <!-- Cars -->
+            <div class="row">
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-german-1.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-american-1.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-german-2.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-american-2.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-german-3.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+                <!-- Single car -->
+                <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+                    <div class="card car-card">
+                        <img src="img/car-american-3.jpeg" class="card-img-top car-img" alt="german">
+                        <!-- card body -->
+                        <div class="card-body">
+                            <div class="car-info d-flex justify-content between">
+                                <!-- first flex child -->
+                                <div class="car-text text-uppercase">
+                                    <h6 class="font-weight-bold">car maker</h6>
+                                    <h6>model</h6>
+                                </div>
+                                <!-- second flex child -->
+                                <h5 class="car-value align-self-center py-2 px-3"> &#8358;
+                                    <span class="car-price">4,500,000</span>
+                                </h5>
+                            </div>
+                        </div>
+                        <!-- End of card body -->
+                        <div class="card-footer text-capitalize d-flex justify-content-between">
+                            <p><span><i class="fas fa-car"></i></span>sedan</p>
+                            <p><span><i class="fas fa-cogs"></i></span>automatic</p>
+                            <p><span><i class="fas fa-gas-pump"></i></span>50</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of single car -->
+            </div>
+
+
+            <!-- End of car -->
+        </div>
+    </section>
+    <!-- End of inventory section -->
 
 
     <script src="js/jquery-3.2.1.min.js"></script>
