--- a/index.html
+++ b/index.html
@@ -330,13 +330,51 @@
                 </div>
                 <!-- End of single car -->
             </div>
-
-
             <!-- End of car -->
         </div>
     </section>
     <!-- End of inventory section -->
+<!-- question section -->
+<section class="question py-5" id="question">
+    <div class="container">
+        <div class="row">
+            <!-- single question -->
+            <div class="col-10 mx-auto my-2 col-md-6 d-flex justify-content-between question-grey p-4">
+                <!-- First flex box child -->
+                <a href="#" class="question-icon mr-3">
+                    <i class="fas fa-search fa-fw"></i>
+                </a>
+                <!-- Second flex child -->
+                <div class="question-text w-75">
+                    <h4 class="question-title text-capitalize font-weight-bold">
+                        are you looking for a car?
+                    </h4>
+                    <p class="question-info">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, odit.
+                    </p>
+                </div>
+            </div>
+            <!-- single question second -->
+            <div class="col-10 mx-auto my-2 col-md-6 d-flex justify-content-between question-yellow p-4">
+                <!-- First flex box child -->
+                <a href="#" class="question-icon mr-3">
+                    <i class="fas fa-dollar-sign fa-fw"></i>
+                </a>
+                <!-- Second flex child -->
+                <div class="question-text w-75">
+                    <h4 class="question-title text-capitalize font-weight-bold">
+                        do you want to sell a car?
+                    </h4>
+                    <p class="question-info">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, odit.
+                    </p>
+                </div>
+            </div>
 
+        </div>
+    </div>
+</section>
+<!-- end of question section -->
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
