--- a/index.html
+++ b/index.html
@@ -449,6 +449,27 @@
     </div>
 </section>
 <!-- End of featured section -->
+<!-- footer -->
+<footer class="footer py-5">
+    <div class="footer-icons d-flex justify-content-around">
+        <a href="#" class="footer-icon">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#" class="footer-icon">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="footer-icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="footer-icon">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="#" class="footer-icon">
+            <i class="fab fa-google-plus"></i>
+        </a>
+    </div>
+</footer>
+<!-- End of footer section -->
 
     <!-- Jquery -->
     <script src="js/jquery-3.2.1.min.js"></script>
