--- a/index.html
+++ b/index.html
@@ -449,6 +449,219 @@
     </div>
 </section>
 <!-- End of featured section -->
+<!-- gallery section -->
+<section class="gallery py-5" id="gallery">
+    <div class="container">
+      <!-- section title -->
+      <div class="row mb-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">our</h1>
+          <h1 class="section-title--special mx-1">gallery</h1>
+        </div>
+      </div>
+      <!-- end of section title -->
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="gallery-item">
+            <img src="img/car-american-1.jpeg" alt="car" class="img-fluid gallery-img">
+          </div>
+        </div>
+        <!-- end of first column -->
+        <div class="col-sm-6 d-flex flex-column justify-content-between">
+          <div class="row">
+            <!-- first item -->
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-2.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+            <!-- second item -->
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-3.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- first item -->
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-4.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+            <!-- second item -->
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-american-5.jpeg" alt="car" class="img-fluid gallery-img">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- end of second column -->
+      </div>
+      <!-- end of row -->
+    </div>
+  </section>
+  <!--end of gallery section -->
+
+  <!-- contact section -->
+  <section class="contact py-5" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-8 mx-auto col-md-6">
+          <form>
+            <div class="form-group">
+              <input type="email" class="form-control contact-input p-3" placeholder="Enter Email">
+            </div>
+            <button type="submit" class="btn btn-outline-secondary btn-block contact-btn">submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--end of contact section -->
+  <!-- services section -->
+  <div class="container">
+    <!-- section title -->
+    <div class="row my-5">
+      <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+        <h1 class="font-weight-bold align-self-center mx-1">our</h1>
+        <h1 class="section-title--special mx-1">services</h1>
+      </div>
+    </div>
+    <!-- end of section title -->
+  </div>
+  <section class="services py-5 d-flex align-items-center" id="services">
+    <!-- video container -->
+    <div class="video-container">
+      <video class="video-item" autoplay loop muted>
+        <source src="video/videoBcg.mp4" type="video/mp4">Your browser does not support video tag
+      </video>
+    </div>
+    <!-- end of video container -->
+    <!-- video overlay -->
+    <div class="video-overlay"></div>
+    <!-- end of video overlay -->
+    <!-- service content -->
+    <div class="container py-5">
+      <div class="row my-3">
+        <!-- col -->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-cogs"></i>
+            </span>
+            <h6 class="text-capitalize service-title">vehicle</h6>
+            <h5 class="text-uppercase font-weight-bold">repair</h5>
+          </div>
+        </div>
+        <!-- end col -->
+        <!-- col -->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-car-battery"></i>
+            </span>
+            <h6 class="text-capitalize service-title">battery</h6>
+            <h5 class="text-uppercase font-weight-bold">replecement</h5>
+          </div>
+        </div>
+        <!-- end col -->
+        <!-- col -->
+        <div class="col-8 mx-auto col-lg-6 col-md-4 my-3">
+          <div class="service py-5 pl-4">
+            <span class="service-icon">
+              <i class="fas fa-car-crash"></i>
+            </span>
+            <h6 class="text-capitalize service-title">roadside</h6>
+            <h5 class="text-uppercase font-weight-bold">assistance</h5>
+          </div>
+        </div>
+        <!-- end col -->
+      </div>
+    </div>
+  </section>
+  <!-- end of services section -->
+  <!-- quotes section -->
+  <section class="quotes py-5 my-5" id="quotes">
+    <div class="container">
+      <!-- section title -->
+      <div class="row mb-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">what they</h1>
+          <h1 class="section-title--special mx-1">say</h1>
+        </div>
+      </div>
+      <!-- end of section title -->
+      <div class="row">
+        <!-- single card -->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-1.jpeg" alt="car" class="card-img-top">
+            <!-- card body -->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-1.jpg" class="rounded-circle customer-img" alt="customer img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-left mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa,
+                praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-2.jpeg" alt="car" class="card-img-top">
+            <!-- card body -->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-2.jpg" class="rounded-circle customer-img" alt="customer img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-left mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa,
+                praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/car-american-3.jpeg" alt="car" class="card-img-top">
+            <!-- card body -->
+            <div class="card-body text-center customer-card-body">
+              <img src="img/customer-3.jpg" class="rounded-circle customer-img" alt="customer img">
+              <div class="card-title">
+                <h5 class="customer-name text-capitalize">customer name</h5>
+              </div>
+              <h6 class="customer-job text-capitalize">customer job</h6>
+              <p class="customer-quote text-left mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa,
+                praesentium?
+              </p>
+              <span class="customer-icon">
+                <i class="fas fa-quote-left"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- end of single card -->
+      </div>
+    </div>
+  </section>
+  <!--end of  quotes section -->
 <!-- footer -->
 <footer class="footer py-5">
     <div class="footer-icons d-flex justify-content-around">
