adding a FilterCars module

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             <!-- End of section title -->
             <div class="row mb-5">
                 <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
-                    <button class="btn btn-outline-secondary text-uppercase mx-1">All</button>
-                    <button class="btn btn-outline-secondary text-uppercase mx-1">American</button>
-                    <button class="btn btn-outline-secondary text-uppercase mx-1">German</button>
+                    <button class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="all">All</button>
+                    <button class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="american">American</button>
+                    <button class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="german">German</button>
                 </div>
             </div>
             <!-- Cars -->
